--- a/package.json
+++ b/package.json
@@ -9,38 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.11.10",
+    "@apollo/client": "^3.12.2",
     "@types/nodemailer": "^6.4.17",
     "animate.css": "^4.1.1",
-    "axios": "^1.7.7",
+    "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "emailjs-com": "^3.2.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "gsap": "^3.12.5",
-    "hast": "^0.0.2",
+    "hast": "^1.0.0",
     "jquery": "^3.7.1",
-    "next": "15.0.3",
+    "next": "15.1.0",
     "parameterize": "^1.0.0",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "rehype-parse": "^9.0.1",
     "rehype-stringify": "^10.0.1",
     "resend": "^4.0.1",
     "sweetalert2": "^11.14.5",
+    "swiper": "^11.1.15",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
-    "@types/canvas-confetti": "^1.6.4",
-    "@types/node": "^20",
+    "@types/aos": "^3.0.7",
+    "@types/node": "^22.10.1",
     "@types/parameterize": "^1.0.3",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2"
   }
 }
