--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/api/contact/route.js"],
+  "include": ["types", "src", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/api/contact/route.js"],
   "exclude": ["node_modules"]
 }
