--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.12.2",
+    "@hookform/resolvers": "^3.9.1",
     "@types/nodemailer": "^6.4.17",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
@@ -24,6 +25,7 @@
     "parameterize": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "rehype-parse": "^9.0.1",
     "rehype-stringify": "^10.0.1",
@@ -31,7 +33,8 @@
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15",
     "unified": "^11.0.5",
-    "unist-util-visit": "^5.0.0"
+    "unist-util-visit": "^5.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
