--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "emailjs-com": "^3.2.0",
+    "express": "^4.21.2",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
     "gsap": "^3.12.5",
     "hast": "^1.0.0",
     "jquery": "^3.7.1",
     "next": "15.1.0",
+    "nodemailer": "^6.9.16",
     "parameterize": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
